refactor: modernizando o código do findAll